# flips-wrapper

./: CMakeLists.txt  Cargo.toml  README.md
include/: flips_wrapper.h
src/: flips_wrapper.cpp  lib.rs
